# sci-comp

./: .gitignore  README.md  hello.py  pyproject.toml
01-linear-algebra/: 01-linalg-intro-and-set-notation.ipynb  01-linear-algebra-intro copy 2.ipynb  01-linear-algebra-intro.ipynb  01a-linalg-intro-and-notation.ipynb  01b-linalg-vectors.ipynb  01c-linalg-matrices-1.ipynb  01d-linalg-matrices-2.ipynb  01e-linalg-matrices-3.ipynb  01e-linalg-matrices-4.ipynb  02-basic-matrix-decompositions.ipynb  02-vector-operations.ipynb  02-vectors.ipynb  03-eigendecomposition-and-diagonalisastion.ipynb  03a-matrix-operations.ipynb  03b-matrix-composition.ipynb  03c-square-matrices-and-determinant.ipynb  03c-square-matrices-determinant-and-trace.ipynb  03d-matrix-inverse-and-system-of-equations.ipynb  03e-spans-spaces-subspaces-rank-and-non-square-matrices.ipynb  04-basic-matrix-decompositions.ipynb  05-eigendecomposition-and-diagonalisastion.ipynb
02-probability-and-statistics/: 01-probability-theory-intro.ipynb
03-data-structures-and-algorithms/: python_basic_data_structures.ipynb
04-physics/: 01-orbital-mechanics-intro.ipynb
10-ai-ml-implementations/: pandas_tut.ipynb
10-ai-ml-implementations/buildGPT/: buildGPT.ipynb
10-ai-ml-implementations/build_micrograd/: build_micrograd.ipynb  build_micrograd_2.ipynb  build_micrograd_3.ipynb
linear-algebra/: Basic Matrix Decompositions.ipynb  Intermediate Linear Algebra in Python.ipynb  Objects in Linear Algebra.ipynb
xx-data-structures-and-algorithms/: python_basic_data_structures.ipynb
