[project]
name = "sci-comp"
version = "0.1.0"
description = "Python implementations of commonly encountered concepts in scientific computation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.8.3"]

[tool.ruff]
line-length = 120
# extend-include = ["*.pyw", "*.ipynb"]
# first-party imports for sorting
src = ["."]
fix = true
show-fixes = true

[tool.ruff.lint]
# rules to enable/ignore
select = [
    "F",     # pyflakes
    "E",     # pycodestyle
    "W",     # pycodestyle
    "ANN",   # type annotations
    "N",     # pep8-naming
    "B",     # bugbear
    "I",     # isort
    "ARG",   # flake8-unused-arguments
    "SLF",   # flake8-self
    "UP",    # pyupgrade
    "PERF",  # perflint
    "RUF",   # ruff-specific
    "SIM",   # flake8-simplify
    "S113",  # request-without-timeout
    "ASYNC", # flake8-async
]

ignore = [
    # allow no return type from dunder methods
    "ANN204",
    # allow == True because pandas dataframes overload equality
    "E712",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
# test functions don't need return types
"tests/*" = ["ANN201", "ANN202"]

[tool.ruff.lint.flake8-annotations]
# allow *args: Any, **kwargs: Any
allow-star-arg-any = true
